Enable Java cgroup support